--- a/.github/workflows/build-passwall.yml
+++ b/.github/workflows/build-passwall.yml
@@ -182,9 +182,15 @@ jobs:
           echo '# 由GitHub Actions自动构建' >> installer_script.txt
           echo '' >> installer_script.txt
           echo 'echo "正在解压PassWall安装包..."' >> installer_script.txt
-          echo 'ARCHIVE=`awk '"'"'/^__ARCHIVE_BELOW__/ {print NR + 1; exit 0; }'"'"' $0`' >> installer_script.txt
+          echo 'SCRIPT_PATH="$0"' >> installer_script.txt
           echo 'mkdir -p /tmp/passwall-extract' >> installer_script.txt
-          echo 'tail -n+$ARCHIVE $0 | tar -xz -C /tmp/passwall-extract' >> installer_script.txt
+          echo 'ARCHIVE=$(awk '"'"'/^__ARCHIVE_BELOW__/ {print NR + 1; exit 0; }'"'"' "$SCRIPT_PATH")' >> installer_script.txt
+          echo 'if [ -z "$ARCHIVE" ]; then' >> installer_script.txt
+          echo '  echo "错误: 无法找到归档标记"' >> installer_script.txt
+          echo '  exit 1' >> installer_script.txt
+          echo 'fi' >> installer_script.txt
+          echo 'echo "找到归档标记，行号: $ARCHIVE"' >> installer_script.txt
+          echo 'tail -n+$ARCHIVE "$SCRIPT_PATH" | tar -xz -C /tmp/passwall-extract' >> installer_script.txt
           echo 'echo "正在运行安装脚本..."' >> installer_script.txt
           echo 'if [ -f "/tmp/passwall-extract/passwall-install.sh" ]; then' >> installer_script.txt
           echo '  chmod +x /tmp/passwall-extract/passwall-install.sh' >> installer_script.txt
