--- a/.github/workflows/build-passwall.yml
+++ b/.github/workflows/build-passwall.yml
@@ -151,16 +151,11 @@ jobs:
           echo '  opkg install "$ipk" || echo "警告: 安装 $(basename $ipk) 失败，继续安装其他包"' >> install_script.txt
           echo 'done' >> install_script.txt
           echo '' >> install_script.txt
-          echo '# 重启服务但保留登录状态' >> install_script.txt
+          echo '# 重启必要服务（避免重启网络服务导致登录状态丢失）' >> install_script.txt
           echo 'echo "正在重启服务..."' >> install_script.txt
-          echo '/etc/init.d/rpcd reload > /dev/null 2>&1 || /etc/init.d/rpcd restart > /dev/null 2>&1' >> install_script.txt
-          echo '# 不重启网络服务，避免断开连接和丢失登录状态' >> install_script.txt
-          echo '# 仅重载必要的PassWall服务' >> install_script.txt
-          echo 'for svc in /etc/init.d/passwall*; do' >> install_script.txt
-          echo '  if [ -x "$svc" ]; then' >> install_script.txt
-          echo '    "$svc" reload > /dev/null 2>&1 || "$svc" restart > /dev/null 2>&1' >> install_script.txt
-          echo '  fi' >> install_script.txt
-          echo 'done' >> install_script.txt
+          echo '/etc/init.d/rpcd restart' >> install_script.txt
+          echo '# 不重启网络服务，避免登录状态丢失' >> install_script.txt
+          echo '# /etc/init.d/network restart' >> install_script.txt
           echo '' >> install_script.txt
           echo '# 清理' >> install_script.txt
           echo 'rm -rf /tmp/passwall-install' >> install_script.txt
@@ -182,25 +177,10 @@ jobs:
           echo '# 由GitHub Actions自动构建' >> installer_script.txt
           echo '' >> installer_script.txt
           echo 'echo "正在解压PassWall安装包..."' >> installer_script.txt
-          echo 'SCRIPT_PATH="$0"' >> installer_script.txt
-          echo 'mkdir -p /tmp/passwall-extract' >> installer_script.txt
-          echo 'ARCHIVE=$(awk '"'"'/^__ARCHIVE_BELOW__/ {print NR + 1; exit 0; }'"'"' "$SCRIPT_PATH")' >> installer_script.txt
-          echo 'if [ -z "$ARCHIVE" ]; then' >> installer_script.txt
-          echo '  echo "错误: 无法找到归档标记"' >> installer_script.txt
-          echo '  exit 1' >> installer_script.txt
-          echo 'fi' >> installer_script.txt
-          echo 'echo "找到归档标记，行号: $ARCHIVE"' >> installer_script.txt
-          echo 'tail -n+$ARCHIVE "$SCRIPT_PATH" | tar -xz -C /tmp/passwall-extract' >> installer_script.txt
+          echo 'ARCHIVE=`awk '"'"'/^__ARCHIVE_BELOW__/ {print NR + 1; exit 0; }'"'"' $0`' >> installer_script.txt
+          echo 'tail -n+$ARCHIVE $0 | tar -xz -C /tmp' >> installer_script.txt
           echo 'echo "正在运行安装脚本..."' >> installer_script.txt
-          echo 'if [ -f "/tmp/passwall-extract/passwall-install.sh" ]; then' >> installer_script.txt
-          echo '  chmod +x /tmp/passwall-extract/passwall-install.sh' >> installer_script.txt
-          echo '  /tmp/passwall-extract/passwall-install.sh' >> installer_script.txt
-          echo 'else' >> installer_script.txt
-          echo '  echo "错误: 找不到安装脚本 /tmp/passwall-extract/passwall-install.sh"' >> installer_script.txt
-          echo '  echo "目录内容:"' >> installer_script.txt
-          echo '  ls -la /tmp/passwall-extract/' >> installer_script.txt
-          echo '  exit 1' >> installer_script.txt
-          echo 'fi' >> installer_script.txt
+          echo '/tmp/passwall-install.sh' >> installer_script.txt
           echo 'exit 0' >> installer_script.txt
           echo '__ARCHIVE_BELOW__' >> installer_script.txt
 
