--- a/.github/workflows/build-passwall.yml
+++ b/.github/workflows/build-passwall.yml
@@ -151,11 +151,10 @@ jobs:
           echo '  opkg install "$ipk" || echo "警告: 安装 $(basename $ipk) 失败，继续安装其他包"' >> install_script.txt
           echo 'done' >> install_script.txt
           echo '' >> install_script.txt
-          echo '# 重启必要服务（避免重启网络服务导致登录状态丢失）' >> install_script.txt
+          echo '# 重启网络和服务' >> install_script.txt
           echo 'echo "正在重启服务..."' >> install_script.txt
           echo '/etc/init.d/rpcd restart' >> install_script.txt
-          echo '# 不重启网络服务，避免登录状态丢失' >> install_script.txt
-          echo '# /etc/init.d/network restart' >> install_script.txt
+          echo '/etc/init.d/network restart' >> install_script.txt
           echo '' >> install_script.txt
           echo '# 清理' >> install_script.txt
           echo 'rm -rf /tmp/passwall-install' >> install_script.txt
